--- a/angular-tour-of-heroes/src/components/heroes/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/components/heroes/heroes/heroes.component.html
@@ -11,11 +11,13 @@
 </ul>
 
 
-<div *ngIf="selectedHero">
+<!-- <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}} Details</h2>
   <div>id: {{selectedHero.id}}</div>
   <div>
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
   </div>
-</div>
+</div> -->
+
+<app-heroes-detail [hero]="selectedHero"></app-heroes-detail>
