--- a/angular-tour-of-heroes/src/components/heroes/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/components/heroes/heroes/heroes.component.html
@@ -1,16 +1,11 @@
-<h2>{{ hero1.name| uppercase }} Details</h2>
-<div><span>id: </span>{{hero1.id}}</div>
-<div><span>name: </span>{{hero1.name}}</div>
-
+<h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
-    <button type="button" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
+    <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </button>
+    </a>
   </li>
 </ul>
-
-
 <!-- <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}} Details</h2>
   <div>id: {{selectedHero.id}}</div>
@@ -20,4 +15,4 @@
   </div>
 </div> -->
 
-<app-heroes-detail [hero]="selectedHero"></app-heroes-detail>
+<!-- <app-heroes-detail [hero]="selectedHero"></app-heroes-detail> -->
