--- a/angular-tour-of-heroes/src/components/intro/intro.component.html
+++ b/angular-tour-of-heroes/src/components/intro/intro.component.html
@@ -1,2 +1,6 @@
 <p>intro works!</p>
 <h1>{{title}}</h1>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
