--- a/angular-tour-of-heroes/src/components/heroes/heroes-detail/heroes-detail.component.html
+++ b/angular-tour-of-heroes/src/components/heroes/heroes-detail/heroes-detail.component.html
@@ -1,3 +1,5 @@
+<h1>test hero detail</h1>
+<p>Day la id nhan duoc: {{id}}</p>
 <div *ngIf="hero">
   <h2>{{hero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
