--- a/angular-tour-of-heroes/src/components/heroes/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/components/heroes/heroes/heroes.component.html
@@ -6,6 +6,9 @@
     </a>
   </li>
 </ul>
+<div style="border: 1px solid red;">
+  <router-outlet />
+</div>
 <!-- <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}} Details</h2>
   <div>id: {{selectedHero.id}}</div>
