--- a/angular-tour-of-heroes/src/app/app.component.html
+++ b/angular-tour-of-heroes/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-intro></app-intro>
-<app-heroes style="margin-left: 50px;"></app-heroes>
+<body>
+  <!-- <app-intro></app-intro> -->
+  <!-- <app-heroes style="margin-left: 50px;"></app-heroes>
+<app-message></app-message> -->
+</body>
 <router-outlet />
